--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="game.js"></script>
+    <link rel="stylesheet" href="style.css">
+
 </body>
 </html>
